--- a/css/main.css
+++ b/css/main.css
@@ -1,25 +1,29 @@
 #classifier table tr:last-child th, #classifier table tr:last-child td {
-        border-bottom: none;
-    }
-    body {
-        background-color: #f3f3f2;
-    }
-    #wrapper {
-        max-width: 650px;
-    }
-    .add-forms {
-        min-height:120px;
-    }
-    .add-forms label {
-        min-height: 50px;
-    }
-    #conclusion {
-        border-color: var(--bs-success);
-    }
-    #line svg {
-        font-size: 2.5rem;
-    }
-    #line svg:hover {
-        fill: var(--bs-primary);
-      }
+    border-bottom: none;
+}
+body {
+    background-color: #f3f3f2;
+}
+#wrapper {
+    max-width: 650px;
+}
+.add-forms {
+    min-height:120px;
+}
+.add-forms label {
+    min-height: 50px;
+}
+#conclusion {
+    border-color: var(--bs-success);
+}
+#line svg {
+    font-size: 2.5rem;
+}
+#line svg:hover {
+    fill: var(--bs-primary);
+}
+input[type=checkbox]
+{
+    padding: 10px;
+}
       
