--- a/css/main.css
+++ b/css/main.css
@@ -17,7 +17,9 @@ body {
     border-color: var(--bs-success);
 }
 #line svg {
-    font-size: 2.5rem;
+    width: 2rem;
+    float: right;
+}
 }
 #line svg:hover {
     fill: var(--bs-primary);
@@ -26,4 +28,8 @@ input[type=checkbox]
 {
     padding: 10px;
 }
-      
+.input-group-text {
+    text-align: start;
+    white-space: break-spaces;
+    min-width: 50px;
+}      
